methods.slug.SlugSnail.scala.error
Erreur de compilation :
SlugSnail:15: error: not enough arguments for method isFacingTrail: (c: java.awt.Color)Boolean.
Unspecified value parameter c.
      if(isFacingTrail()){
                      ^SlugSnail:26: error: not enough arguments for method isFacingTrail: (c: java.awt.Color)Boolean.
Unspecified value parameter c.
        if(isFacingTrail()){
                        ^